add macros for modals and buttons
Macros allow for certain features of the code such as a Youtube modal to be reused with different ids and linked buttons all in one line of code.

--- a/app/static/assets/css/argon.css
+++ b/app/static/assets/css/argon.css
@@ -9641,7 +9641,11 @@ button.bg-darker:focus
         align-self: stretch !important;
     }
 }
-
+.code-block {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 16px;
+  }
 .float-left
 {
     float: left !important;
@@ -18728,6 +18732,7 @@ textarea[resize='horizontal']
 .section-shaped
 {
     position: relative;
+    
 }
 .section-shaped .stars-and-coded
 {
