--- a/app/templates/accounts/login.html
+++ b/app/templates/accounts/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   <main>
-    <section class="section section-shaped section-lg">
+    <section class="section section-shaped section-xl">
       <div class="shape shape-style-1 bg-gradient-default">
         <span></span>
         <span></span>
@@ -23,23 +23,6 @@
         <div class="row justify-content-center">
           <div class="col-lg-5">
             <div class="card bg-secondary shadow border-0">
-              <!-- <div class="card-header bg-white pb-5">
-                <div class="text-muted text-center mb-3">Sign in</div>
-                <div class="btn-wrapper text-center">
-                  <a href="#" class="btn btn-neutral btn-icon">
-                    <span class="btn-inner--icon">
-                      <img alt="image" src="/static/assets/img/icons/common/github.svg">
-                    </span>
-                    <span class="btn-inner--text">Github</span>
-                  </a>
-                  <a href="#" class="btn btn-neutral btn-icon">
-                    <span class="btn-inner--icon">
-                      <img alt="image" src="/static/assets/img/icons/common/google.svg">
-                    </span>
-                    <span class="btn-inner--text">Google</span>
-                  </a>
-                </div>
-              </div> -->
               <div class="card-body px-lg-5 py-lg-5">
                 <div class="text-center text-muted mb-4">
                   <h1>Log In</h1>
