--- a/app/templates/accounts/register.html
+++ b/app/templates/accounts/register.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   <main>
-    <section class="section section-shaped section-lg">
+    <section class="section section-shaped section-xl" >
       <div class="shape shape-style-1 bg-gradient-default">
         <span></span>
         <span></span>
@@ -23,23 +23,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-5">
             <div class="card bg-secondary shadow border-0">
-              <!-- <div class="card-header bg-white pb-5">
-                <div class="text-muted text-center mb-3"><small>Sign up with</small></div>
-                <div class="text-center">
-                  <a href="#" class="btn btn-neutral btn-icon mr-4">
-                    <span class="btn-inner--icon">
-                      <img src="/static/assets/img/icons/common/github.svg" alt="image">
-                    </span>
-                    <span class="btn-inner--text">Github</span>
-                  </a>
-                  <a href="#" class="btn btn-neutral btn-icon">
-                    <span class="btn-inner--icon">
-                      <img src="/static/assets/img/icons/common/google.svg" alt="image">
-                    </span>
-                    <span class="btn-inner--text">Google</span>
-                  </a>
-                </div>
-              </div> -->
+
               <div class="card-body px-lg-5 py-lg-5">
                 <div class="text-center text-muted mb-4">
                   <h1>Register</h1>
