--- a/app/templates/courses/electroeg.html
+++ b/app/templates/courses/electroeg.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-
+{% from 'includes/plugs.html' import create_DA_Item, create_breaks, quiz_modal, document_modal, yt_modal%}
 
   <main class="profile-page">
       
@@ -32,19 +32,6 @@
           <div class="card card-profile shadow mt--300">
             <div class="px-4">
 
-                <!-- <div class="col-lg-3 order-lg-2">
-                  <div class="card-profile-image">
-                    <a href="#">
-                      <img src="/static/assets/img/theme/team-4-800x800.jpg" class="rounded-circle" alt="image">
-                    </a>
-                  </div>
-                </div> -->
-                <!-- <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
-                  <div class="card-profile-actions py-4 mt-lg-0">
-                    <a href="#" class="btn btn-sm btn-info mr-4">Connect</a>
-                    <a href="#" class="btn btn-sm btn-default float-right">Message</a>
-                  </div>
-                </div> -->
                 <div class="text-left">
                   <div class="card-profile-stats" style="padding-bottom: 0%;">
                     <div>
@@ -79,25 +66,12 @@
       </section>
 
         <br>
-
+      <!-- copy paste block -->
     <section class="section">
       <div class="container">
         <div class="card card-profile shadow mt--300">
           <div class="px-4">
             <div class="row justify-content-start">
-              <!-- <div class="col-lg-3 order-lg-2">
-                <div class="card-profile-image">
-                  <a href="#">
-                    <img src="/static/assets/img/theme/team-4-800x800.jpg" class="rounded-circle" alt="image">
-                  </a>
-                </div>
-              </div> -->
-              <!-- <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
-                <div class="card-profile-actions py-4 mt-lg-0">
-                  <a href="#" class="btn btn-sm btn-info mr-4">Connect</a>
-                  <a href="#" class="btn btn-sm btn-default float-right">Message</a>
-                </div>
-              </div> -->
               <div class="text-left">
                 <div class="card-profile-stats">
                   <div>
@@ -108,58 +82,32 @@
               </div>
             </div>
             <div class="text-center mt-4">
-              
+            <!-- CHAPTER/LESSON DIVS WITH ASSIGNMENTS< NOTES AND VIDEOS -->
+
             <div class="text-left d-inline">
                 <div style="width: 50%; float:left">
                     <h6>Documents: </h6>
-                    <a data-toggle="modal" data-target="#myModal" href="#myModal" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Setting up VSCode to run Python</h6></span>
-                    </a>
-                    
-                    <a data-toggle="modal" data-target="#yTvid" href="#yTvid" style="background-color:black">
-                      <span class="d-block"><i class="ni ni-button-play" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">VSCode Tutorial</h6></span>
-                    </a>
+                    {{create_DA_Item(modal_id="myModal", title='Chapter 1: EE')}}
+                    {{create_DA_Item(modal_id="yTvid", title='Some EE stuff', isDoc=false)}}
                     
                 </div>
                   
                 <div style="width: 50%; float:right">
                   <h6>Assignments: </h6>
-                    <a data-toggle="modal" data-target="#quiz" href="#quiz" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Class 1 Homework Assignment</h6></span>
-                    </a>
-
-                    <a data-toggle="modal" data-target="#quiz2" href="#quiz2" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Class 1 Another Assignment</h6></span>
-                    </a>
+                  {{create_DA_Item(modal_id="quiz", title='Section 1 Homework Assignment',doc=doc, hidden_val='numcorrect')}}
+                  {{create_DA_Item(modal_id="quiz2", title='Section 1.5 Homework Assignment', doc=doc,hidden_val='numcorrect2')}}
                 </div>
             </div>
-              <br>
-              <br>
-              <br>
-              <br>  
-              <br>
-              
+            {{create_breaks(5)}}
+
             </div>
             
-            <!-- <div class="mt-5 py-5 border-top text-center">
-              <div class="row justify-content-center">
-                <div class="col-lg-9">
-                  <p>An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</p>
-                  <a href="#">Show more</a>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
     </section>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    {{create_breaks(6)}}
 
 
 
@@ -168,19 +116,9 @@
         <div class="card card-profile shadow mt--300">
           <div class="px-4">
             <div class="row justify-content-start">
-              <!-- <div class="col-lg-3 order-lg-2">
-                <div class="card-profile-image">
-                  <a href="#">
-                    <img src="/static/assets/img/theme/team-4-800x800.jpg" class="rounded-circle" alt="image">
-                  </a>
-                </div>
-              </div> -->
-              <!-- <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
-                <div class="card-profile-actions py-4 mt-lg-0">
-                  <a href="#" class="btn btn-sm btn-info mr-4">Connect</a>
-                  <a href="#" class="btn btn-sm btn-default float-right">Message</a>
-                </div>
-              </div> -->
+
+                    <!-- CHAPTER/LESSON DIVS WITH ASSIGNMENTS< NOTES AND VIDEOS -->
+
               <div class="text-left">
                 <div class="card-profile-stats">
                   <div>
@@ -195,196 +133,39 @@
             <div class="text-left d-inline">
                 <div style="width: 50%; float:left">
                     <h6>Documents: </h6>
-                    <a data-toggle="modal" data-target="#myModal" href="#myModal" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Setting up VSCode to run Python</h6></span>
-                    </a>
-                    
-                    <a data-toggle="modal" data-target="#yTvid" href="#yTvid" style="background-color:black">
-                      <span class="d-block"><i class="ni ni-button-play" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">VSCode Tutorial</h6></span>
-                    </a>
+                    {{create_DA_Item(modal_id="myModal", title='Chapter 2: EE')}}
+                    {{create_DA_Item(modal_id="yTvid2", title='Messing with Arduinos', isDoc=false)}}
                     
                 </div>
                   
                 <div style="width: 50%; float:right">
                   <h6>Assignments: </h6>
-                    <a data-toggle="modal" data-target="#quiz" href="#quiz" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Class 1 Homework Assignment</h6></span>
-                    </a>
-
-                    <a data-toggle="modal" data-target="#quiz2" href="#quiz2" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Class 1 Another Assignment</h6></span>
-                    </a>
+                  {{create_DA_Item(modal_id="quiz", title='Section 2 Homework Assignment',doc=doc, hidden_val='numcorrect')}}
+                  {{create_DA_Item(modal_id="quiz2", title='Section 2.5 Homework Assignment',doc=doc, hidden_val='numcorrect2')}}
                 </div>
             </div>
-              <br>
-              <br>
-              <br>
-              <br>  
-              <br>
-              
+            {{create_breaks(5)}}
             </div>
-            
-            <!-- <div class="mt-5 py-5 border-top text-center">
-              <div class="row justify-content-center">
-                <div class="col-lg-9">
-                  <p>An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</p>
-                  <a href="#">Show more</a>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
     </section>
     
-    
   </main>
 
-  <div class="modal fade myModal-xl" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="myModalLabel">Variables and their Data Types</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <p>Whoo! This is some text!</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade quiz-lg" id="quiz" tabindex="-1" role="dialog" aria-labelledby="quizLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="quizLabel">Class 1: Quiz</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <h5 class="mb-0" id="question"></h5>             
-                <!-- has-success is-valid-->
-                <div data-toggle="buttons">
-                  <div data-toggle="buttons">
-                    <label for="opt1" class="btn btn-secondary btn-lg btn-block " style="text-align: left;" id="o1">
-                      <input type="radio" id="opt1" name="q0"  style="display: none;" value="o1"/><span id="lopt1"></span>
-                    </label>
-                    <label for="opt2" class="btn btn-secondary btn-lg btn-block" style="text-align: left;" id="o2">
-                      <input type="radio"   id="opt2" name="q0" style="display: none;" value="o2"/><span id="lopt2"></span>
-                    </label>
-                    <label for="opt3" class="btn btn-secondary btn-lg btn-block" style="text-align: left;" id="o3">
-                      <input type="radio"  id="opt3" name="q0" style="display: none;" value="o3"/><span id="lopt3"></span>
-                    </label>
-                    <label for="opt4" class="btn btn-secondary btn-lg btn-block" style="text-align: left;" id="o4">
-                      <input type="radio"  id="opt4" name="q0" style="display: none;" value="o4"/><span id="lopt4"></span>
-                    </label>
-                    
-                  </div>
-                    <input type="button" id="answer" value="Check Answer" class="btn btn-success btn-lg btn-block"/>
-                </div>
 
 
-        </div>
-        <div class="modal-footer">
-          <form action="" method="POST">
-
-        
-            <input type="text" id="numcorrect" name="numcorrect" hidden>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary" id="btn" disabled>Turn In</button>
-            <!-- <button type="submit" class="btn btn-success btn-sm" id="btn" disabled>Turn In</button> -->
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade quiz2-lg" id="quiz2" tabindex="-1" role="dialog" aria-labelledby="quiz2Label" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="quiz2Label">Class 1: Quiz Repeat</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <h5 class="mb-0" id="question2"></h5>             
-                <!-- has-success is-valid-->
-                <div data-toggle="buttons">
-                  <div data-toggle="buttons">
-                    <label for="aopt1" class="btn btn-secondary btn-lg btn-block" style="text-align: left;" id="ao1">
-                      <input type="radio" id="aopt1" name="q1" style="display: none;" value="ao1"/><span id="l2opt1"></span>
-                    </label>
-                    <label for="aopt2" class="btn btn-secondary btn-lg btn-block" style="text-align: left;" id="ao2">
-                      <input type="radio"   id="aopt2" name="q1" style="display: none;" value="ao2"/><span id="l2opt2"></span>
-                    </label>
-                    <label for="aopt3" class="btn btn-secondary btn-lg btn-block" style="text-align: left;" id="ao3">
-                      <input type="radio"  id="aopt3" name="q1" style="display: none;" value="ao3"/><span id="l2opt3"></span>
-                    </label>
-                    <label for="aopt4" class="btn btn-secondary btn-lg btn-block" style="text-align: left;" id="ao4">
-                      <input type="radio"  id="aopt4" name="q1" style="display: none;" value="ao4"/><span id="l2opt4"></span>
-                    </label>
-                    
-                  </div>
-                    <input type="button" id="answer2" value="Check Answer" class="btn btn-success btn-lg btn-block"/>
-                </div>
 
 
-        </div>
-        <div class="modal-footer">
-          <form action="" method="POST">
-
-        
-            <input type="text" id="numcorrect2" name="numcorrect2" hidden>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary" id="btn2" disabled>Turn In</button>
-            <!-- <button type="submit" class="btn btn-success btn-sm" id="btn" disabled>Turn In</button> -->
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade yTvid-lg" id="yTvid" tabindex="-1" role="dialog" aria-labelledby="yTvidLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="yTvidLabel">Variables and their Data Types</h5>
-          <button type="button" class="close" onclick="stop();" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Da8-QfGemgo" id="sauce"
-            allowfullscreen></iframe>
-        </div>
-        <div class="modal-footer">
-        </div>
-      </div>
-    </div>
-  </div>
-
+  
+  {{ quiz_modal(quiz_id="quiz", name="q0", check_id="answer", turn_in="btn", label_id="", question_id="l", qid='question', question_title="Chapter 1: EE", hidden_val="numcorrect") }}
+  {{ quiz_modal(quiz_id="quiz2", name="q1", check_id="answer2", turn_in="btn2", label_id="a", question_id="l2",qid='question2',question_title="Some EE Stuff", hidden_val="numcorrect2") }}
+  {{ yt_modal(vid_id='yTvid', ifr_id='sauce', title="Hot Wings", emb_link="https://www.youtube.com/embed/Da8-QfGemgo") }}
+  {{ yt_modal(vid_id='yTvid2', ifr_id='sauce2', title="Caleb City", emb_link="https://www.youtube.com/embed/M01GuDCk4f4") }}
 
 <!-- Add pausing functionality instead -->
 <script src="/static/assets/js/question.js"></script>
 <script>
-   
-  function stop(){
-    var iframe = document.getElementById('sauce');
-    iframe.src = iframe.src;
-}
-
 
   let quiz = {
     questions: ["What is a daily object that has a similar use to a varible?", "What is the right type?", "Who is the best mario brother?"],
@@ -409,12 +190,6 @@
   let quizId = ["lopt1", "lopt2", "lopt3", "lopt4", "question"]
   let quizId2 = ["l2opt1", "l2opt2", "l2opt3", "l2opt4", "question2"]
  
-  function stop(){
-    var iframe = document.getElementById('sauce');
-    iframe.src = iframe.src;
-}
-
-
 
   $(document).ready(function() {
     prep_modal(checker="answer", submitter="btn", hidden_val="numcorrect", questions=quiz, questionId=quizId, name="q0");
