--- a/app/templates/layouts/default-fullscreen.html
+++ b/app/templates/layouts/default-fullscreen.html
@@ -37,7 +37,7 @@
   <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous'></script>
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous'></script>
   <!-- Argon CSS -->
-  <link type="text/css" href="/static/assets/css/argon.css?v=1.1.0" rel="stylesheet">
+  <link type="text/css" href="/static/assets/css/argon.css" rel="stylesheet">
 </head>
 
 <body>
