add icons for documents and yt vids
green star for watching vids or reading documents

--- a/app/templates/courses/electroeg.html
+++ b/app/templates/courses/electroeg.html
@@ -87,15 +87,15 @@
             <div class="text-left d-inline">
                 <div style="width: 50%; float:left">
                     <h6>Documents: </h6>
-                    {{create_DA_Item(modal_id="myModal", title='Chapter 1: EE')}}
-                    {{create_DA_Item(modal_id="yTvid", title='Some EE stuff', isDoc=false)}}
+                  {#  {{create_DA_Item(modal_id="myModal", title='Chapter 1: EE')}}
+                    {{create_DA_Item(modal_id="yTvid", title='Some EE stuff', isDoc=false)}} #}
                     
                 </div>
                   
                 <div style="width: 50%; float:right">
                   <h6>Assignments: </h6>
-                  {{create_DA_Item(modal_id="quiz", title='Section 1 Homework Assignment',doc=doc, hidden_val='numcorrect')}}
-                  {{create_DA_Item(modal_id="quiz2", title='Section 1.5 Homework Assignment', doc=doc,hidden_val='numcorrect2')}}
+                  {# {{create_DA_Item(modal_id="quiz", title='Section 1 Homework Assignment',doc=doc, hidden_val='numcorrect')}}
+                  {{create_DA_Item(modal_id="quiz2", title='Section 1.5 Homework Assignment', doc=doc,hidden_val='numcorrect2')}} #}
                 </div>
             </div>
             {{create_breaks(5)}}
@@ -133,8 +133,8 @@
             <div class="text-left d-inline">
                 <div style="width: 50%; float:left">
                     <h6>Documents: </h6>
-                    {{create_DA_Item(modal_id="myModal", title='Chapter 2: EE')}}
-                    {{create_DA_Item(modal_id="yTvid2", title='Messing with Arduinos', isDoc=false)}}
+                   {# {{create_DA_Item(modal_id="myModal", title='Chapter 2: EE')}}
+                    {{create_DA_Item(modal_id="yTvid2", title='Messing with Arduinos', isDoc=false)}} #}
                     
                 </div>
                   
