--- a/app/templates/courses/machinel.html
+++ b/app/templates/courses/machinel.html
@@ -86,8 +86,8 @@
             <div class="text-left d-inline">
                 <div style="width: 50%; float:left">
                     <h6>Documents: </h6>
-                    {{create_DA_Item(modal_id="myModal", title='Setting up Jupyter Notebook')}}
-                    {{create_DA_Item(modal_id="yTvid", title='Running our first ML Kernel', isDoc=false)}}
+                   {# {{create_DA_Item(modal_id="myModal", title='Setting up Jupyter Notebook')}}
+                    {{create_DA_Item(modal_id="yTvid", title='Running our first ML Kernel', isDoc=false)}} #}
                     
                 </div>
                   
@@ -132,13 +132,13 @@
             <div class="text-left d-inline">
               <div style="width: 50%; float:left">
                 <h6>Documents: </h6>
-                {{create_DA_Item(modal_id="myModal", title='Setting up Jupyter Notebook')}}
+              {#  {{create_DA_Item(modal_id="myModal", title='Setting up Jupyter Notebook')}} #}
                 
             </div>
               
             <div style="width: 50%; float:right">
               <h6>Assignments: </h6>
-              {{create_DA_Item(modal_id="quiz2", title='Section 2 ML Classification', hidden_val='numcorrect2', doc=doc)}}
+              {# {{create_DA_Item(modal_id="quiz2", title='Section 2 ML Classification', hidden_val='numcorrect2', doc=doc)}} #}
             </div>
             </div>
             {{create_breaks(5)}}
