--- a/app/templates/courses/electroeg.html
+++ b/app/templates/courses/electroeg.html
@@ -1,11 +1,11 @@
 {% extends "layouts/default-fullscreen.html" %}
 
-{% block title %} Intro to Python {% endblock %} 
+{% block title %} Introduction to Circuit Analysis {% endblock %} 
 
 {% block content %}
 
-{% from 'includes/plugs.html' import create_DA_Item, create_breaks, quiz_modal, document_modal, yt_modal%}
-
+{% from 'includes/plugs.html' import create_DA_Item, create_breaks, quiz_modal, document_modal, yt_modal, create_unit_block%}
+{% from 'courses/course-material.html' import create_ee%}
   <main class="profile-page">
       
     <section class="section-profile-cover section-shaped my-0">
@@ -31,17 +31,13 @@
         <div class="container">
           <div class="card card-profile shadow mt--300">
             <div class="px-4">
-
                 <div class="text-left">
                   <div class="card-profile-stats" style="padding-bottom: 0%;">
                     <div>
-                      <span class="heading">Intro to Electrical Engineering</span>
+                      <span class="heading">Intro to Circuit Analysis</span>
                     </div>
-
                   </div>
                 </div>
-                
-
               <div class="progress-wrapper" style="padding-top: 0%;">
                 <div class="progress-info">
                   <div class="progress-label">
@@ -55,113 +51,80 @@
                   <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="{{session['ee']}}" aria-valuemin="0" aria-valuemax="100" style="width: {{session['ee']}}%;"></div>
                 </div>
               </div>
-              
-
             </div>
-
           </div>
-
         </div>
-
       </section>
 
         <br>
       <!-- copy paste block -->
-    <section class="section">
-      <div class="container">
-        <div class="card card-profile shadow mt--300">
-          <div class="px-4">
-            <div class="row justify-content-start">
-              <div class="text-left">
-                <div class="card-profile-stats">
-                  <div>
-                    <span class="heading">Intro to EE: Class 1</span>
-                    <span class="description">Setting up our IDE</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="text-center mt-4">
-            <!-- CHAPTER/LESSON DIVS WITH ASSIGNMENTS< NOTES AND VIDEOS -->
 
-            <div class="text-left d-inline">
-                <div style="width: 50%; float:left">
-                    <h6>Documents: </h6>
-                  {#  {{create_DA_Item(modal_id="myModal", title='Chapter 1: EE')}}
-                    {{create_DA_Item(modal_id="yTvid", title='Some EE stuff', isDoc=false)}} #}
-                    
-                </div>
-                  
-                <div style="width: 50%; float:right">
-                  <h6>Assignments: </h6>
-                  {# {{create_DA_Item(modal_id="quiz", title='Section 1 Homework Assignment',doc=doc, hidden_val='numcorrect')}}
-                  {{create_DA_Item(modal_id="quiz2", title='Section 1.5 Homework Assignment', doc=doc,hidden_val='numcorrect2')}} #}
-                </div>
-            </div>
-            {{create_breaks(5)}}
+    {% call(isDocument) create_unit_block(heading="UNIT: 1", description="TBH", int_breaks=6, ext_breaks=7) %}
+      {% if isDocument %}
+        {{create_DA_Item(modal_id="doc_ee_di_1", title='Lesson 1: Current', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_2", title='Lesson 2: Voltage', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_3", title='Lesson 3: Conductance', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_4", title='Lesson 4: Ammeters & Voltmeters', doc=doc, hidden_val="numcorrect")}} 
+      {% else %}
+          None!
+      {% endif %}
+    {% endcall %}
 
-            </div>
-            
-          </div>
-        </div>
-      </div>
-    </section>
+    {% call(isDocument) create_unit_block(heading="UNIT: 2", description="TBH", int_breaks=5, ext_breaks=6) %}
+      {% if isDocument %}
+        {{create_DA_Item(modal_id="doc_ee_di_5", title='Lesson 5: Resistance (Pt. 1)', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_6", title='Lesson 6: Resistance (Pt. 2)', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_7", title='Lesson 7: Resistance (Pt. 3)', doc=doc, hidden_val="numcorrect")}} 
+      {% else %}
+          None!
+      {% endif %}
+    {% endcall %}
 
-    {{create_breaks(6)}}
+    {% call(isDocument) create_unit_block(heading="UNIT: 3", description="TBH", int_breaks=5, ext_breaks=6) %}
+      {% if isDocument %}
+        {{create_DA_Item(modal_id="doc_ee_di_8", title='Lesson 8: Ohm\'s Law', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_9", title='Lesson 9: Power & Energy', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_10", title='Lesson 10: Series Resistors', doc=doc, hidden_val="numcorrect")}} 
+      {% else %}
+          None!
+      {% endif %}
+    {% endcall %}
 
+    {% call(isDocument) create_unit_block(heading="UNIT: 4", description="TBH", int_breaks=5, ext_breaks=6) %}
+      {% if isDocument %}
+        {{create_DA_Item(modal_id="doc_ee_di_11", title='Lesson 11: Series Circuits', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_12", title='Lesson 12: Kirchoff\'s Voltage Law', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_13", title='Lesson 13: Kirchoff\'s Current Law', doc=doc, hidden_val="numcorrect")}} 
+      {% else %}
+          None!
+      {% endif %}
+    {% endcall %}
 
-
-    <section class="section">
-      <div class="container">
-        <div class="card card-profile shadow mt--300">
-          <div class="px-4">
-            <div class="row justify-content-start">
-
-                    <!-- CHAPTER/LESSON DIVS WITH ASSIGNMENTS< NOTES AND VIDEOS -->
-
-              <div class="text-left">
-                <div class="card-profile-stats">
-                  <div>
-                    <span class="heading">Intro to EE: Class 2</span>
-                    <span class="description">Operations with Variables</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="text-center mt-4">
-              
-            <div class="text-left d-inline">
-                <div style="width: 50%; float:left">
-                    <h6>Documents: </h6>
-                   {# {{create_DA_Item(modal_id="myModal", title='Chapter 2: EE')}}
-                    {{create_DA_Item(modal_id="yTvid2", title='Messing with Arduinos', isDoc=false)}} #}
-                    
-                </div>
-                  
-                <div style="width: 50%; float:right">
-                  <h6>Assignments: </h6>
-                  {{create_DA_Item(modal_id="quiz", title='Section 2 Homework Assignment',doc=doc, hidden_val='numcorrect')}}
-                  {{create_DA_Item(modal_id="quiz2", title='Section 2.5 Homework Assignment',doc=doc, hidden_val='numcorrect2')}}
-                </div>
-            </div>
-            {{create_breaks(5)}}
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    {% call(isDocument) create_unit_block(heading="UNIT: 5", description="TBH", int_breaks=5, ext_breaks=6) %}
+      {% if isDocument %}
+        {{create_DA_Item(modal_id="doc_ee_di_14", title='Lesson 14: Ground', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_15", title='Lesson 15: Parallel Resistors', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_16", title='Lesson 16: Parallel Circuits', doc=doc, hidden_val="numcorrect")}} 
+      {% else %}
+          None!
+      {% endif %}
+    {% endcall %}
     
+    {% call(isDocument) create_unit_block(heading="UNIT: 5", description="TBH", int_breaks=5, ext_breaks=6) %}
+      {% if isDocument %}
+        {{create_DA_Item(modal_id="doc_ee_di_17", title='Lesson 17: Open and Short Circuits', doc=doc, hidden_val="numcorrect")}} 
+        {{create_DA_Item(modal_id="doc_ee_di_18", title='Lesson 18: Series-Parallel Circuits', doc=doc, hidden_val="numcorrect")}} 
+      {% else %}
+          None!
+      {% endif %}
+    {% endcall %}
   </main>
 
-
-
-
-
-  
-  {{ quiz_modal(quiz_id="quiz", name="q0", check_id="answer", turn_in="btn", label_id="", question_id="l", qid='question', question_title="Chapter 1: EE", hidden_val="numcorrect") }}
-  {{ quiz_modal(quiz_id="quiz2", name="q1", check_id="answer2", turn_in="btn2", label_id="a", question_id="l2",qid='question2',question_title="Some EE Stuff", hidden_val="numcorrect2") }}
+ 
   {{ yt_modal(vid_id='yTvid', ifr_id='sauce', title="Hot Wings", emb_link="https://www.youtube.com/embed/Da8-QfGemgo") }}
   {{ yt_modal(vid_id='yTvid2', ifr_id='sauce2', title="Caleb City", emb_link="https://www.youtube.com/embed/M01GuDCk4f4") }}
+
+  {{ create_ee()}}
 
 <!-- Add pausing functionality instead -->
 <script src="/static/assets/js/question.js"></script>
